# notebook

./: .gitignore  README.md  pyproject.toml
digital_bookplates/: get_digital_bookplate_md.ipynb  instances_paid_on_bookplate_funds.ipynb
