[tool.poetry]
name = "folio-notebook"
version = "0.1.0"
description = ""
authors = ["Shelley Doljack <sdoljack@stanford.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
httpx = "0.23.3"
folioclient = "^0.60.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
